--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -18,6 +18,11 @@ import Icon from './Icon.astro';
 		<h2>Scrum master</h2>
 		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
 	</div>
+	<div class="stack gap-2 lg:gap-4">
+		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Scrum</h2>
+		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+	</div>
 </section>
 
 <style>
